--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
 spring.application.name=JavaCourse2025
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:dev-testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database.platform = org.hibernate.dialect.H2Dialect
-spring.datasource.username=sa
+spring.datasource.username=dev
 spring.datasource.password=
 
 spring.jpa.show-sql=true
@@ -10,5 +10,3 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 spring.h2.console.pat=/h2
-
-spring.profiles.active=dev
